src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Street_Address_For_Mailing__c</fullName>
        <description>This is used for mailing address.</description>
        <formula>IF(ISBLANK( ShippingStreet ),  Provider_Address_1__c &amp; &quot;, &quot; &amp;  Provider_Address_2__c  , ShippingStreet)</formula>
        <label>Street_Address_For_Mailing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subsidy_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subsidy Region</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Region__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Subsidy Region</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Accounts (Subsidy Region)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Summer_Capacity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Summer Capacity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <label>Tax ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toddler_15_mo_33_mo__c</fullName>
        <label>Toddler (15 mo - 33 mo)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Toddler_Preschool_15_mo_K__c</fullName>
        <label>Toddler/Preschool (15 mo - K)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_License_Capacity__c</fullName>
        <description>Calculates sum of values in the nine LG license capacity fields</description>
        <formula>Infant_birth_15_mo__c +  Toddler_15_mo_33_mo__c +  Preschool_33_mo_K__c +  Kindergarten__c +  Multi_Age_Group_birth_14_yr__c +  Infant_Toddler_birth_33_mo__c +  Toddler_Preschool_15_mo_K__c +  Preschool_SA_33_mo_8_yr__c +  School_Age_5_yr_14_yr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total License Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Staff__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Staff</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Adoption__c</fullName>
        <label>Type of Adoption</label>
        <picklist>
            <picklistValues>
                <fullName>Domestic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Ownership__c</fullName>
        <label>Type of Ownership</label>
        <picklist>
            <picklistValues>
                <fullName>Doing Business As (DBA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-profit Corp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>For-profit Corp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Umbrella_Members__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field implements a Look Up relationship to create a self relationship in order for the Umbrella record type to display an Umbrella Members related list to display all Providers within the Umbrella</description>
        <label>Umbrella</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected umbrella must be an umbrella record type</errorMessage>
            <filterItems>
                <field>Account.Record_Type_Name__c</field>
                <operation>contains</operation>
                <value>Umbrella</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Umbrella Members</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unlisted_Phone_Number__c</fullName>
        <label>Unlisted Phone Number</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_Legacy_Prov_Number__c</fullName>
        <description>This field returns true if the legacy provider number must be used (used in report)</description>
        <formula>IF ( ISBLANK ( Provider_No__c ), FALSE, IF (  Licensing_Transaction_Closed__c &gt; 0, FALSE, TRUE))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Use Legacy Prov Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Physical_Restraints__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Physical Restraints</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_In_Region__c</fullName>
        <description>Check if the region of the user is the region of the provider. Used in Reports</description>
        <formula>TEXT($User.Region__c)=  Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User_In_Region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zipcode_for_Mailing__c</fullName>
        <description>Zipcode from mailing address if one is available for Provider, else Provider&apos;s Zipcode</description>
        <formula>IF (ISBLANK( ShippingPostalCode ),  Provider_Zip_Code__c ,  ShippingPostalCode )</formula>
        <inlineHelpText>Zipcode from mailing address if one is available for Provider, else Provider&apos;s Zipcode</inlineHelpText>
        <label>Zipcode for Mailing</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllLicensedAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Provider_City__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Region__c</columns>
        <columns>License_Status__c</columns>
        <columns>Provider_Status__c</columns>
        <columns>License_Type__c</columns>
        <columns>Last_Issue_Date__c</columns>
        <columns>Renewal_date__c</columns>
        <columns>Umbrella_Members__c</columns>
        <columns>Licensor_Full_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Account.Unlicensed_Provider</value>
        </filters>
        <filters>
            <field>License_Status__c</field>
            <operation>equals</operation>
            <value>Licensed</value>
        </filters>
        <label>All Providers - Licensed</label>
    </listViews>
    <listViews>
        <fullName>AllMyLicensedAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Provider_City__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Region__c</columns>
        <columns>License_Status__c</columns>
        <columns>Provider_Status__c</columns>
        <columns>License_Type__c</columns>
        <columns>Last_Issue_Date__c</columns>
        <columns>Renewal_date__c</columns>
        <columns>Umbrella_Members__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Account.Umbrella,012j0000000xjRS</value>
        </filters>
        <filters>
            <field>License_Status__c</field>
            <operation>equals</operation>
            <value>Licensed</value>
        </filters>
        <label>My Prov. - Licensed</label>
    </listViews>
    <listViews>
        <fullName>AllMyUmbrella</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Provider_Number__c</columns>
        <columns>Provider_Address_1__c</columns>
        <columns>Provider_City__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.PHONE2</columns>
        <columns>Provider_Email__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Umbrella,012j0000000xjRS</value>
        </filters>
        <label>My Umbrella - All</label>
    </listViews>
    <listViews>
        <fullName>AllUmbrella</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Region__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Umbrella,012j0000000xjRS</value>
        </filters>
        <label>Umbrella - All</label>
    </listViews>
    <listViews>
        <fullName>AllUnlicensedProviders</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Provider_City__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Region__c</columns>
        <columns>License_Status__c</columns>
        <columns>Provider_Status__c</columns>
        <columns>Licensor_Full_Name__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Unlicensed_Provider</value>
        </filters>
        <label>Providers - All Unlicensed from Cases</label>
    </listViews>
    <listViews>
        <fullName>All_FCC_Assistant</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>Region__c</columns>
        <columns>License_Status__c</columns>
        <columns>Provider_Status__c</columns>
        <columns>License_Type__c</columns>
        <columns>Certified_As__c</columns>
        <columns>Last_Issue_Date__c</columns>
        <columns>Renewal_date__c</columns>
        <columns>Licensor_Full_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.FCC_Assistant</value>
        </filters>
        <label>All FCC Assistant</label>
    </listViews>
    <listViews>
        <fullName>All_Providers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Provider_City__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Region__c</columns>
        <columns>License_Status__c</columns>
        <columns>Provider_Status__c</columns>
        <columns>License_Type__c</columns>
        <columns>Last_Issue_Date__c</columns>
        <columns>Renewal_date__c</columns>
        <columns>Umbrella_Members__c</columns>
        <columns>Licensor_Full_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Account.Umbrella,Account.Unlicensed_Provider</value>
        </filters>
        <label>Providers - All</label>
    </listViews>
    <listViews>
        <fullName>FCC_Assistant_Approved</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>Region__c</columns>
        <columns>License_Status__c</columns>
        <columns>Provider_Status__c</columns>
        <columns>License_Type__c</columns>
        <columns>Last_Issue_Date__c</columns>
        <columns>Renewal_date__c</columns>
        <columns>Licensor_Full_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.FCC_Assistant</value>
        </filters>
        <filters>
            <field>License_Status__c</field>
            <operation>equals</operation>
            <value>Licensed</value>
        </filters>
        <label>FCC Assistant - Approved</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Provider_City__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Region__c</columns>
        <columns>License_Status__c</columns>
        <columns>Provider_Status__c</columns>
        <columns>License_Type__c</columns>
        <columns>Last_Issue_Date__c</columns>
        <columns>Renewal_date__c</columns>
        <columns>Umbrella_Members__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Account.Umbrella,012j0000000xjRS</value>
        </filters>
        <label>My Prov. - All</label>
    </listViews>
    <listViews>
        <fullName>MyAccountsNoElecUse</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Provider_City__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Region__c</columns>
        <columns>License_Status__c</columns>
        <columns>Provider_Status__c</columns>
        <columns>License_Type__c</columns>
        <columns>Last_Issue_Date__c</columns>
        <columns>Renewal_date__c</columns>
        <columns>Umbrella_Members__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Account.Umbrella,012j0000000xjRS</value>
        </filters>
        <filters>
            <field>License_Status__c</field>
            <operation>equals</operation>
            <value>Licensed</value>
        </filters>
        <filters>
            <field>Electronic_Communication__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Prov. - Licensed and No Elec Use</label>
    </listViews>
    <listViews>
        <fullName>MyLicensedAccounts</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>Provider_City__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Region__c</columns>
        <columns>License_Status__c</columns>
        <columns>Provider_Status__c</columns>
        <columns>License_Type__c</columns>
        <columns>Last_Issue_Date__c</columns>
        <columns>Renewal_date__c</columns>
        <columns>Umbrella_Members__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Account.Umbrella,012j0000000xjRS</value>
        </filters>
        <filters>
            <field>License_Status__c</field>
            <operation>equals</operation>
            <value>Licensed</value>
        </filters>
        <filters>
            <field>Renewal_date__c</field>
            <operation>equals</operation>
            <value>NEXT_N_MONTHS:4</value>
        </filters>
        <filters>
            <field>Renewal_date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>My Prov. - With Upcoming Lic Exp Date</label>
    </listViews>
    <listViews>
        <fullName>MyProvTransInProgress</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Provider_City__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Region__c</columns>
        <columns>License_Status__c</columns>
        <columns>Provider_Status__c</columns>
        <columns>License_Type__c</columns>
        <columns>Last_Issue_Date__c</columns>
        <columns>Renewal_date__c</columns>
        <columns>Umbrella_Members__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Account.Umbrella,012j0000000xjRS</value>
        </filters>
        <filters>
            <field>In_Progress_Transaction__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>My Prov. - With Transaction In Progress</label>
        <sharedTo>
            <role>Admin</role>
            <role>FCC_Supervisor</role>
            <role>Licensor</role>
            <role>Regional_Director</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyRegionAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Provider_City__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Region__c</columns>
        <columns>License_Status__c</columns>
        <columns>Provider_Status__c</columns>
        <columns>License_Type__c</columns>
        <columns>Last_Issue_Date__c</columns>
        <columns>Renewal_date__c</columns>
        <columns>Umbrella_Members__c</columns>
        <columns>Licensor_Full_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Account.Umbrella,012j0000000xjRS</value>
        </filters>
        <filters>
            <field>User_In_Region__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>License_Status__c</field>
            <operation>equals</operation>
            <value>Licensed</value>
        </filters>
        <label>My Region Prov - Licensed</label>
    </listViews>
    <listViews>
        <fullName>MyRegionLicensedAccounts</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4) AND 5</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>Provider_City__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Region__c</columns>
        <columns>License_Status__c</columns>
        <columns>Provider_Status__c</columns>
        <columns>License_Type__c</columns>
        <columns>Last_Issue_Date__c</columns>
        <columns>Renewal_date__c</columns>
        <columns>Umbrella_Members__c</columns>
        <columns>Licensor_Full_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Account.Umbrella,012j0000000xjRS</value>
        </filters>
        <filters>
            <field>License_Status__c</field>
            <operation>equals</operation>
            <value>Licensed</value>
        </filters>
        <filters>
            <field>Renewal_date__c</field>
            <operation>equals</operation>
            <value>NEXT_N_MONTHS:4</value>
        </filters>
        <filters>
            <field>Renewal_date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>User_In_Region__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Region Prov - With Close Lic Exp Date</label>
    </listViews>
    <listViews>
        <fullName>MyRegionProvTransInProgress</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Provider_City__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Region__c</columns>
        <columns>License_Status__c</columns>
        <columns>Provider_Status__c</columns>
        <columns>License_Type__c</columns>
        <columns>Last_Issue_Date__c</columns>
        <columns>Renewal_date__c</columns>
        <columns>Umbrella_Members__c</columns>
        <columns>Licensor_Full_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Account.Umbrella,012j0000000xjRS</value>
        </filters>
        <filters>
            <field>In_Progress_Transaction__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>User_In_Region__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Region Prov - With Trans. In Progress</label>
        <sharedTo>
            <role>Admin</role>
            <role>FCC_Supervisor</role>
            <role>Licensor</role>
            <role>Regional_Director</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Adoption_Agency</fullName>
        <active>true</active>
        <description>Placement - Adoption Agency</description>
        <label>Adoption Agency</label>
    </recordTypes>
    <recordTypes>
        <fullName>FCC</fullName>
        <active>true</active>
        <description>Family Child Care</description>
        <label>Family Child Care</label>
    </recordTypes>
    <recordTypes>
        <fullName>FCC_Assistant</fullName>
        <active>true</active>
        <description>Family Child Care Assistant</description>
        <label>FCC Assistant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Foster_Care_Agency</fullName>
        <active>true</active>
        <description>Placement - Foster Care Agency</description>
        <label>Foster Care Agency</label>
    </recordTypes>
    <recordTypes>
        <fullName>Group_Care</fullName>
        <active>true</active>
        <description>Residential - Group Care</description>
        <label>Group Care</label>
    </recordTypes>
    <recordTypes>
        <fullName>Large_Group</fullName>
        <active>true</active>
        <description>Large Group and school age</description>
        <label>Large Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>Small_Group</fullName>
        <active>true</active>
        <description>Small group and school age</description>
        <label>Small Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>Temporary_Shelter</fullName>
        <active>true</active>
        <description>Residential - Temporary Shelter</description>
        <label>Temporary Shelter</label>
    </recordTypes>
    <recordTypes>
        <fullName>Umbrella</fullName>
        <active>true</active>
        <description>Umbrella</description>
        <label>Umbrella</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unlicensed_Provider</fullName>
        <active>true</active>
        <description>Provider identified in a case but which has not been identified as an existing licensed provider</description>
        <label>Unlicensed Provider</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Email_mandatory_if_Electronic_checked</fullName>
        <active>true</active>
        <description>Email address is mandatory when electronic communication checkbox is checked.</description>
        <errorConditionFormula>AND( OR(ISBLANK(Provider_Email__c), ISNULL(Provider_Email__c), Provider_Email__c=&apos;&apos;),  Electronic_Communication__c = TRUE)</errorConditionFormula>
        <errorDisplayField>Provider_Email__c</errorDisplayField>
        <errorMessage>Email address must be provided if Electronic Communication is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Status_Legal_Order_filled_text_is_req</fullName>
        <active>true</active>
        <description>If Provider Status = Legal Order, then Legal Order is required</description>
        <errorConditionFormula>ISPICKVAL( Provider_Status__c , &quot;Legal Order&quot;) 
&amp;&amp;
ISBLANK( Legal_Order__c )</errorConditionFormula>
        <errorDisplayField>Legal_Order__c</errorDisplayField>
        <errorMessage>If Provider Status is &quot;Legal Order&quot;, then you need to select the type(s) of Legal Order</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Licensing_Region_Updated_Only_By_Supervi</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
!ISNEW(),
ISCHANGED( Region__c),
!ISBLANK($UserRole.Name),
$UserRole.Name !=&apos;Executive_and_Directors&apos;,
$UserRole.Name!=&apos;Regional_Director&apos;,
$UserRole.Name!=&apos;Admin&apos;,
OR(NOT(OR(CONTAINS($UserRole.DeveloperName,&apos;Director&apos;),CONTAINS($UserRole.DeveloperName,&apos;Supervisor&apos;))),
AND($UserRole.DeveloperName==&apos;FCC_Supervisor&apos;,  RecordType.Name != &apos;Family Child Care&apos;),
AND($UserRole.DeveloperName==&apos;SLGSA_Supervisor&apos;,AND(RecordType.Name != &apos;Large Group&apos;, RecordType.Name != &apos;Small Group&apos;)) ,
AND($UserRole.DeveloperName==&apos;R_P_Supervisor&apos;, RecordType.Name != &apos;Group Care&apos;,RecordType.Name != &apos;Temporary Shelter&apos;,RecordType.Name != &apos;Adoption Agency&apos;,RecordType.Name != &apos;Foster Care Agency&apos;)))</errorConditionFormula>
        <errorDisplayField>Region__c</errorDisplayField>
        <errorMessage>You are not authorized to update this information, please contact your supervisor to proceed with the update.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Owner_Updated_Only_By_Supervi</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
!ISNEW(), 
ISCHANGED( OwnerId ), 
!ISBLANK($UserRole.Name), 
$UserRole.Name !=&apos;Executive_and_Directors&apos;, 
$UserRole.Name!=&apos;Regional_Director&apos;, 
$UserRole.Name!=&apos;Admin&apos;, 
OR(NOT(OR(CONTAINS($UserRole.DeveloperName,&apos;Director&apos;),CONTAINS($UserRole.DeveloperName,&apos;Supervisor&apos;))), 
AND($UserRole.DeveloperName==&apos;FCC_Supervisor&apos;, AND (RecordType.Name != &apos;Family Child Care&apos;, RecordType.Name != &apos;FCC Assistant&apos; , RecordType.Name != &apos;Unlicensed Provider&apos; )), 
AND($UserRole.DeveloperName==&apos;SLGSA_Supervisor&apos;,AND(RecordType.Name != &apos;Large Group&apos;, RecordType.Name != &apos;Small Group&apos;)) , 
AND($UserRole.DeveloperName==&apos;R_P_Supervisor&apos;, RecordType.Name != &apos;Group Care&apos;,RecordType.Name != &apos;Temporary Shelter&apos;,RecordType.Name != &apos;Adoption Agency&apos;,RecordType.Name != &apos;Foster Care Agency&apos;)))</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>Owner can only be modified by authorized users, please contact your supervisor</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Provider_Must_Be_In_MA</fullName>
        <active>true</active>
        <description>All providers in the system must be located in Mass</description>
        <errorConditionFormula>AND(NOT(CONTAINS(Record_Type_Name__c , &quot;Umbrella&quot; )), NOT(CONTAINS(Record_Type_Name__c , &quot;Assistant&quot; )), TEXT(State__c) &lt;&gt; &quot;MA&quot;,
TEXT(Provider_Status__c) &lt;&gt; &quot;Voluntary Closure&quot;)</errorConditionFormula>
        <errorDisplayField>State__c</errorDisplayField>
        <errorMessage>Provider must be located in Massachusetts, please select &quot;MA&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_If_CountryType_Other_selecte</fullName>
        <active>true</active>
        <errorConditionFormula>AND(INCLUDES(Country_Type__c , &apos;Other(s)&apos;),
ISBLANK(Other_Countries__c))</errorConditionFormula>
        <errorDisplayField>Other_Countries__c</errorDisplayField>
        <errorMessage>If Country Type is &quot;Other(s)&quot;, then you need to enter the value for &quot;Other Countries&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_if_Use_Physical_Restraints_True</fullName>
        <active>true</active>
        <description>Required if &apos;Use Physical Restraints&apos; = True</description>
        <errorConditionFormula>AND( ISPICKVAL( Restraint_Method__c , &quot;&quot;), Use_Physical_Restraints__c = TRUE)</errorConditionFormula>
        <errorDisplayField>Restraint_Method__c</errorDisplayField>
        <errorMessage>Restraint Method is required if Physical Restraints are used</errorMessage>
    </validationRules>
</CustomObject>